@@ -23,7 +23,8 @@
     "d3": "^3.5",
     "c3": "^0.4",
     "papaparse": "^4.1",
-    "fullcalendar": "^3.0"
+    "fullcalendar": "^3.0",
+    "mousetrap": "^1.6"
   },
   "devDependencies": {
     "qunit": "^1.18"
