@@ -20,6 +20,7 @@ this repository contains the full copyright notices and license terms. -->
         <script type="text/javascript" src="bower_components/papaparse/papaparse.min.js"></script>
         <script type="text/javascript" src="bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
         <script type="text/javascript" src="bower_components/fullcalendar/dist/locale-all.js"></script>
+        <script type="text/javascript" src="bower_components/mousetrap/mousetrap.min.js"></script>
 
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
