@@ -1,3 +1,4 @@
+* Add keyboard shortcuts
 * Update states of both toolbar and menu
 * Improve toolbar order
 * Use login details in title
